<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/roundshape_dialougs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_ur_love"
            android:layout_marginTop="20dp"
            android:gravity="center"/>


<RatingBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rating_bar"
    android:numStars="5"
    android:stepSize="0.5" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:minWidth="200dp"
            android:inputType="textCapCharacters"
            android:layout_margin="20dp"
            android:id="@+id/submit"
            android:textColor="#FFFF"
            android:background="@drawable/button_bg"/>


    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>