<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/your_dialog_root_element"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/roundshape_dialougs"
         android:orientation="vertical"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/top"
            android:gravity="center"
            android:text="@string/quit"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:background="@drawable/n_acces_bg"
            android:textSize="@dimen/_17sdp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_msg"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
/>
        <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/adview_fram"
            android:orientation="vertical">





        </FrameLayout>
</ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_weight="5"
                android:gravity="center">

                <Button
                    android:id="@+id/rate_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="@string/rate_us"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <Button
                    android:id="@+id/no_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/chat_bg_new"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp" />

                <Button
                    android:id="@+id/ok_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>