<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_50sdp"
    tools:context="com.malam.whatsdelet.nolastseen.hiddenchat.Activities.Storage_permission">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_20sdp"
    android:layout_above="@id/tv"
    android:layout_centerHorizontal="true"
    app:srcCompat="@drawable/ic_safe_and_secure"/>
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/seguisb"
        android:textStyle="normal"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_24sdp"
        android:layout_above="@+id/access_msg"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/buttonStockColor"
        android:layout_marginLeft="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:text="@string/safe_secure"
        />
    <TextView
        android:id="@+id/access_msg"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_24sdp"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/access"
        android:text="@string/storagepermision"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/access"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_40sdp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:fontFamily="@font/seguisb"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:padding="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/_12sdp"
        android:text="@string/Allow"/>


</RelativeLayout>